@@ -233,8 +233,7 @@ Several build profiles are understood and supported:
 - nodoc: Exclude most documentation
 - pkg.linux.notools: Exclude userland tool packages (linux-kbuild-<version>,
   linux-perf-<version>, etc.)
-- cross: Needed when cross-building.  Currently this must be used
-  together with pkg.linux.notools as not all the userland tools can be
-  cross-built.
+- cross: Needed when cross-building.  Currently this must be used together
+  with nopython as the build-dependencies will be unsatisfiable otherwise.
 - nopython: Disable Python bindings.  This currently disables building the
   linux-perf-<version> package, as the perf program embeds Python.
