@@ -11,6 +11,7 @@ include $(top_rulesdir)/Makefile.inc
 # Build userland headers first
 unexport VERSION
 all-local:
-	$(MAKE) -C $(top_srcdir) ARCH=$(KERNEL_ARCH) O=$(CURDIR) \
+	mkdir -p headers-tools
+	$(MAKE) -C $(top_srcdir) ARCH=$(KERNEL_ARCH) O=$(CURDIR)/headers-tools \
 		INSTALL_HDR_PATH=$(CURDIR) headers_install
 all-recursive: all-local
