@@ -24,6 +24,7 @@ else ifneq ($(DEB_BUILD_ARCH),$(DEB_HOST_ARCH))
 else
   CROSS_COMPILE :=
 endif
+export CROSS_COMPILE
 
 export PYTHONPATH = $(CURDIR)/debian/lib/python
 export DH_OPTIONS
@@ -74,12 +75,12 @@ binary-indep: install-support
 ifneq ($(DO_TOOLS),False)
   build-arch-arch: $(STAMPS_DIR)/build-tools
   binary-arch-arch: install-kbuild install-usbip install-liblockdep install-cpupower
-  ifneq ($(filter alpha amd64 arm64 armel armhf hppa i386 mips mips64 mips64el mipsel powerpc powerpcspe ppc64 ppc64el s390 s390x sh4 sparc sparc64,$(DEB_BUILD_ARCH)),)
+  ifneq ($(filter alpha amd64 arm64 armel armhf hppa i386 mips mips64 mips64el mipsel powerpc powerpcspe ppc64 ppc64el s390 s390x sh4 sparc sparc64,$(DEB_HOST_ARCH)),)
     ifeq ($(filter nopython,$(DEB_BUILD_PROFILES)),)
       binary-arch-arch: install-perf
     endif
   endif
-  ifneq ($(filter i386 amd64 x32,$(DEB_BUILD_ARCH)),)
+  ifneq ($(filter i386 amd64 x32,$(DEB_HOST_ARCH)),)
     binary-arch-arch: install-hyperv-daemons
   endif
   binary-indep: install-lockdep
