@@ -18,6 +18,7 @@ linux (4.7~rc2-1~exp1) UNRELEASED; urgency=medium
   * debian/README.source: Document the supported build profiles
   * debian/control: Fix build-dependencies for cross-building
   * Add support for the nopython build profile, disabling the linux-perf package
+  * Fix build rules for userland tools to support cross-building
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 07 Jun 2016 19:37:55 +0100
 
